TAG: alleleload-6-0-16-1
DATE: 08/21/2020
STAFF: lec
TR13204/Infrastructure Release

TAG: alleleload-6-0-14-1
DATE: 04/03/2019
STAFF: lec 
TR12963/teleuse-to-mgd_java_api

TAG: alleleload-6-0-12-2
DATE: 03/20/2018
STAFF: lec 
CHANGES: TR12806/URL change in molecular note

TAG: alleleload-6-0-12-1
DATE: 03/07/2018
STAFF: lec 
CHANGES: TR12662/GMC project
1)MGI_Relationship._Category_key = 1006
removed noteFile code
place hodler for MGI_Relationship code
the IKMC is the only product using this and IKMC does not add any driver note
2) add autosequence select/update : MGI_Reference_Assoc/ALL_Allele_CellLine

TAG: alleleload-6-0-10-1
DATE: 05/25/2017
STAFF: lec 
CHANGES:
1) TR12540/Disease Ontology/bin/makeAllele.py/obsolete field BCP change required

TAG: alleleload-6-0-7-1
DATE: 01/05/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: alleleload-6-0-5-1, 6-0-6-1
DATE: 08/31/2016
STAFF: kstone
CHANGES: changed ftp url

TAG: alleleload-6-0-4-2
DATE: 06/27/2016
STAFF: lec 
CHANGES: TR12377
1) makeIKMC.py : remove "\n" from ikmcNote
2) makeIKMC.py/makeAllele.py : fixed documentation

TAG: alleleload-6-0-4-1
DATE: 04/28/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"

TAG: alleleload-6-0-1-4
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) ikmc.config.default: Don't override MAIL_LOG_PROC and MAIL_LOG_CUR
2) test.config.default: Don't override MAIL_LOG_CUR

TAG: alleleload-6-0-1-3
DATE: 11/16/2015
STAFF: lec 
CHANGES:
1) fix bin/makeAllele.py/ikmcSQLs script

TAG: alleleload-6-0-1-2
TAG: alleleload-6-0-1-1
DATE: 10/14/2015, 10/20/2015
STAFF: lec 
CHANGES:
1) TR12011/12070/scrum-dog/use new input file
2) postgres cleanup

TAG: alleleload-6-0-0-2
DATE: 08/21/15
STAFF: lec
CHANGES: TR12020/obsolete all_marker_assoc table

TAG: alleleload-6-0-0-1
DATE: 7/23/15
STAFF: pf
CHANGES: postgres conversion release tag

TAG: alleleload-tr11750-MP
DATE: 06/29/2015
STAFF: kstone

TAG: alleleload-tr11750-BP