@@ -1,3 +1,9 @@
+TAG: alleleload-6-0-16-2
+DATE: 10/26/2020
+STAFF: lec
+TR13204/Infrastructure Release
+all_mutation_assoc : autosequence change
+
 TAG: alleleload-6-0-16-1
 DATE: 08/21/2020
 STAFF: lec
